Upgrade Java source/target from 11 to 17
- Apply instanceof pattern matching
- Add @Serial annotation to serialVersionUID fields
- Convert String.format to .formatted
- Convert !optional.isPresent to optional.isEmpty
- Convert multiline strings to text blocks
- Update lombok dependency for Java 11+ compatibility
- Add javax.annotation dependency migrations

All 41 modules build successfully with JDK 17.