@@ -54,14 +54,12 @@ public class BindJpaFactory implements SqlStatementCustomizerFactory {
         try {
             return member.read(entity);
         } catch (IllegalAccessException e) {
-            String message = String.format(
-                    "Unable to access property value for column %s",
-                    member.getColumnName());
+            String message = "Unable to access property value for column %s".formatted(
+                member.getColumnName());
             throw new EntityMemberAccessException(message, e);
         } catch (InvocationTargetException e) {
-            String message = String.format(
-                    "Exception thrown in accessor method for column %s",
-                    member.getColumnName());
+            String message = "Exception thrown in accessor method for column %s".formatted(
+                member.getColumnName());
             throw new EntityMemberAccessException(message, e);
         }
     }
