@@ -21,8 +21,7 @@ import org.jdbi.v3.json.JsonConfig;
 import org.jdbi.v3.json.JsonMapper;
 
 public class UnimplementedJsonMapper implements JsonMapper {
-    private static final String NO_IMPL_INSTALLED = String.format(
-        "you need to install (see %s) a %s impl, like jdbi3-jackson2 or jdbi3-gson2",
+    private static final String NO_IMPL_INSTALLED = "you need to install (see %s) a %s impl, like jdbi3-jackson2 or jdbi3-gson2".formatted(
         JsonConfig.class.getSimpleName(),
         JsonMapper.class.getSimpleName()
     );
